...
            <LinearLayout android:id="@+id/app_top4" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal" android:paddingTop="12dp" android:paddingBottom="8dp">
                <TextView android:id="@+id/app_name4" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/none" />
                <TextView android:id="@+id/app_time4" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/none" android:textAlignment="textEnd" />
            </LinearLayout>
            <ProgressBar android:id="@+id/progressBar4" style="?android:attr/progressBarStyleHorizontal" android:layout_width="match_parent" android:layout_height="10dp" android:max="100" android:progressTint="@color/brand_teal_dark" android:progressBackgroundTint="@color/brand_teal_light" />
        </LinearLayout>
        <Button android:id="@+id/detail_button" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/detail_button" android:layout_margin="20dp" android:layout_gravity="center" style="@style/Widget.LifeHub.Button.Secondary" android:textAllCaps="false" android:layout_marginHorizontal="20dp" />
    </LinearLayout>
</ScrollView>
